--- a/css/main.css
+++ b/css/main.css
@@ -356,8 +356,7 @@ div.name {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.header-row-title {
+}  .header-row-title {
   margin: 10vh 0 0 0;
   color: var(--white);
   font-size: 95%;
@@ -366,7 +365,9 @@ div.name {
   letter-spacing: .5em;
   font-weight: 300;
   text-transform: uppercase;
+  margin-top: 40%;
 }
+
 .header-row-bottom {
   height: 30%;
 }
@@ -513,9 +514,6 @@ div.name {
     opacity: 0;
   }
 }
-
-
-
 
 .collage {
   /* overflow: hidden;*/
