--- a/css/pages.css
+++ b/css/pages.css
@@ -607,3 +607,46 @@ footer {
   color: black;
   font-size : 50px;
 }
+@media screen and (min-width: 601px) {
+  .name-animal {
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .name-animal {
+    font-size: 30px;
+margin-left: 2%;
+    margin-top: -20%;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .name-animal {
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .name-other-page {
+    font-size: 30px;
+    margin-left: 7%;
+    margin-top: -20%;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .social-mediatitle {
+    font-size : 50px;
+    text-align: center;
+    margin-bottom: 2,5%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .social-mediatitle {
+    font-size : 20px;
+    text-align: center;
+    margin-bottom: 2,5%;
+  }
+}
+
+
