--- a/css/contact.css
+++ b/css/contact.css
@@ -508,8 +508,7 @@ strong {
 .overlay {
   width: 100%;
   max-width: 1140px;
-  max-height: 640px;
-  padding: 8rem 6rem;
+  padding: 25px 50px 75px 250px;
   align-items: center;
   background-color: #ab858c;
   box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
@@ -788,4 +787,18 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
     text-align: center;
     margin-bottom: 2,5%;
   }
+}
+
+.button-send {
+  background-color: white;
+  border: none;
+  color: #black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 1em;
 }
