--- a/css/main.css
+++ b/css/main.css
@@ -714,6 +714,7 @@ html {
   position: relative;
   box-shadow: 0 0 5px rgba(75, 75, 75, .07);
   z-index: 1;
+  border-radius: 1em;
 }
 
 @media screen and (min-width: 601px) {
@@ -766,6 +767,20 @@ html {
 }
 
 @media screen and (min-width: 601px) {
+  .card-media3 {
+    float: right;
+    border-radius: 1em;
+    margin-top: 4%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card-media3 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 601px) {
   .card-media2 {
     float: right;
     margin-top: 10%;
@@ -797,6 +812,7 @@ html {
   background-color: #ab858c;
   color: white;
   border: 2px solid white;
+  border-radius: 1em;
 }
 
 .button1:hover {
