--- a/css/pages.css
+++ b/css/pages.css
@@ -513,6 +513,19 @@ h6 {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
+
+@media screen and (min-width: 601px) {
+  .title-page {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .title-page {
+
+  }
+}
+
 @media(max-width:767px) {
   .intro-message {
     padding-bottom: 15%;
