--- a/css/main2.css
+++ b/css/main2.css
@@ -34,67 +34,6 @@
   --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 
-* {
-  box-sizing: border-box;
-}
-html, body {
-  margin: 0;
-  width: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  scroll-behavior: smooth;
-  -webkit-font-smoothing: antialiased;
-  background-color: #1e1e1e;
-}
-
-header {
-  position: relative;
-  height: 100vh;
-}
-
-main {
-  position: relative;
-  min-height: 50vh;
-  background-color: #1e1e1e;
-  z-index: 10;
-}
-:root {
-  --bc: #14121c;
-  --bc-gray: #0e0d10;
-  --white: #ffffff;
-  --black: #000000;
-  --dark-blue: #1f2029;
-  --extra-dark-blue: #13141a;
-  --dark-light: #424455;
-  --red: #da2c4d;
-  --dark-red: #6e1727;
-  --yellow: #f8ab37;
-  --grey: #ecedf3;
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --orange: #fd7e14;
-  --green: #28a745;
-  --light-green: #24e33a;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #f9c6cf;
-  --secondary: #6c757d;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --light-gray: #ebecf2;
-  --dark: #343a40;
-  --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-}
-
 html, body {
   margin: 0;
   width: 100%;
@@ -274,6 +213,9 @@ nav {
   width: calc(100% - 10vw);
   display: inline-block;
 }
+
+
+
 /* Menu */
 .menu {
   top: 0;
@@ -316,6 +258,10 @@ nav {
 .menu-item {
 }
 /* HEADER */
+header {
+  position: relative;
+  height: 100vh;
+}
 div.name {
 
 }
@@ -439,6 +385,117 @@ div.name {
   color: var(--white);
   text-transform: uppercase;
   z-index: 10;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  background-color: #1e1e1e;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
+}
+
+.lead {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+@media screen and (min-width: 601px) {
+  div.intro-header {
+  }
+}
+
+@media screen and (max-width: 600px) {
+  div.intro-header {
+    margin-top: 10%;
+  }
+}
+
+.intro-header {
+  padding-top: 5%;
+  padding-bottom: 50px;
+  text-align: center;
+  /*color: #f8f8f8;*/
+  color: #ab858c;
+  background-size: cover;
+  margin-top: -5%;
+}
+
+.intro-message {
+  position: relative;
+  padding-top: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
+.intro-message > h1 {
+  margin: 0;
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+  font-size: 5em;
+}
+
+.intro-divider {
+  width: 400px;
+  border-top: 1px solid #f8f8f8;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.intro-message > h3 {
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+}
+
+
+@media screen and (min-width: 601px) {
+  .title-page {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .title-page {
+
+  }
+}
+
+@media(max-width:767px) {
+  .intro-message {
+    padding-bottom: 15%;
+  }
+
+  .intro-message > h1 {
+    font-size: 3em;
+  }
+
+  ul.intro-social-buttons > li {
+    display: block;
+    margin-bottom: 20px;
+    padding: 0;
+  }
+
+  ul.intro-social-buttons > li:last-child {
+    margin-bottom: 0;
+  }
+
+  .intro-divider {
+    width: 100%;
+  }
+}
+
+.network-name {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 2px;
 }
 
 /* Selection */
@@ -655,39 +712,13 @@ div.name {
     }
 }
 
-html {
-  background: #FAF7F2;
-  background-image: url(https://s3.postimg.org/s1n3ji1ur/paper_fibers_2_X.png);
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/*.u-clearfix:before,
-.u-clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.u-clearfix:after {
-  clear: both;
-}
-
-.u-clearfix {
-  *zoom: 1;
-}
-
-.card-container {
-  margin: 25px auto 0;
+main {
   position: relative;
-  width: 692px;
+  min-height: 50vh;
+  background-color: #1e1e1e;
+  z-index: 10;
 }
-*/
+/* TEXT CONTAINERS */
 @media screen and (min-width: 601px) {
   .card-container {
     margin: 25px auto 0;
@@ -882,3 +913,5 @@ footer {
     margin-bottom: 2,5%;
   }
 }
+
+
