--- a/css/main2.css
+++ b/css/main2.css
@@ -266,9 +266,16 @@ div.name {
 
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 1200px) {
+div.name {
+  font-size: 25px;
+  margin-bottom: 15%;
+}
+}
+
+@media screen and (max-width: 1200px) {
   div.name {
-    font-size: 25px;
+    font-size: 15px;
     margin-bottom: 15%;
   }
 }
@@ -723,7 +730,7 @@ main {
   .card-container {
     margin: 25px auto 0;
     position: relative;
-    width: 692px;
+    width: 800px;
   }
 }
 
@@ -748,7 +755,7 @@ main {
 @media screen and (min-width: 601px) {
   .card-body{
     display: inline-block;
-    width: 310px;
+    width: 400px;
   }
 }
 
