--- a/css/contact.css
+++ b/css/contact.css
@@ -449,15 +449,15 @@ footer {
 }
 
 .fa-facebook {
-  color: #ab858c;
+  color: white;
 }
 
 .fa-instagram {
-  color: #ab858c;
+  color: white;
 }
 
 .fa-envelope {
-  color: #ab858c;
+  color: white;
 }
 .social-media {
   font-size : 50px;
