--- a/css/contact.css
+++ b/css/contact.css
@@ -820,3 +820,16 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   cursor: pointer;
   border-radius: 1em;
 }
+.inputbox {
+  background-color: white;
+  border: none;
+  color: #black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 1em;
+}
