--- a/css/pages.css
+++ b/css/pages.css
@@ -620,7 +620,7 @@ footer {
 
 @media screen and (max-width: 600px) {
   .social-media {
-    font-size : 20px;
+    font-size : 40;
     text-align: center;
     margin-bottom: 2,5%;
   }
