--- a/css/pages.css
+++ b/css/pages.css
@@ -606,8 +606,16 @@ footer {
   color: white;
 }
 
-.fa-envelope {
+@media screen and (min-width: 601px) {
+  .fa-envelope {
   color: white;
+}
+}
+
+@media screen and (max-width: 600px) {
+  .fa-envelope {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 601px) {
