--- a/css/contact.css
+++ b/css/contact.css
@@ -847,3 +847,9 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   cursor: pointer;
   border-radius: 1em;
 }
+
+@media screen and (max-width: 600px) {
+  #envelope {
+    display: none;
+  }
+}
