--- a/css/contact.css
+++ b/css/contact.css
@@ -820,7 +820,7 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   }
 }
 
-.button-send {
+/*.button-send {
   background-color: white;
   border: none;
   color: #black;
@@ -833,6 +833,7 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   cursor: pointer;
   border-radius: 1em;
 }
+*/
 
 .inputbox {
   background-color: white;
