--- a/css/contact.css
+++ b/css/contact.css
@@ -820,7 +820,7 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   }
 }
 
-.button-send {
+/*.button-send {
   background-color: white;
   border: none;
   color: #black;
@@ -833,8 +833,23 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
   cursor: pointer;
   border-radius: 1em;
 }
+*/
 
 .inputbox {
+  background-color: white;
+  border: none;
+  color: #black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 1em;
+}
+
+#inputbox {
   background-color: white;
   border: none;
   color: #black;
@@ -851,5 +866,11 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
 @media screen and (max-width: 600px) {
   #envelope {
     display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #instagram {
+    margin-left : -30px;
   }
 }
