--- a/css/pages.css
+++ b/css/pages.css
@@ -608,8 +608,8 @@ footer {
 
 @media screen and (min-width: 601px) {
   .fa-envelope {
-  color: white;
-}
+    color: white;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -689,5 +689,11 @@ footer {
 @media screen and (max-width: 600px) {
   #envelope {
     display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #instagram {
+    margin-left : -30px;
   }
 }
