--- a/css/contact.css
+++ b/css/contact.css
@@ -546,7 +546,6 @@ strong {
   }
 }
 
-
 .overlay__inner {
   max-width: 36rem;
 }
@@ -599,7 +598,7 @@ a {
 
 @media only screen and (max-width: 840px) {
   body {
-    padding: 1.5rem;
+    /*padding: 1.5rem;*/
   }
 
   .overlay {
