--- a/css/contact.css
+++ b/css/contact.css
@@ -837,7 +837,7 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
 .inputbox {
   background-color: white;
   border: none;
-  color: #black;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -851,7 +851,7 @@ input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[typ
 #inputbox {
   background-color: white;
   border: none;
-  color: #black;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
