--- a/css/contact.css
+++ b/css/contact.css
@@ -505,7 +505,7 @@ strong {
   font-weight: 600;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1850px) {
   .overlay {
     width: 100%;
     max-width: 1140px;
@@ -518,10 +518,64 @@ strong {
     margin-left: 25%;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1850px) {
+    .overlay {
+      width: 100%;
+      max-width: 1050px;
+      padding: 25px 50px 75px 250px;
+      align-items: center;
+      background-color: #ab858c;
+      box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+      border-radius: 2rem;
+      border: 1px solid rgba(255, 255, 255, 0.125);
+      margin-left: 20%;
+    }
+}
+@media screen and (max-width: 1500px) {
   .overlay {
     width: 100%;
-    max-width: 800px;
+    max-width: 1050px;
+    padding: 25px 50px 75px 250px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 15%;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .overlay {
+    width: 100%;
+    max-width: 950px;
+    padding: 25px 50px 75px 250px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 15%;
+  }
+}
+@media screen and (max-width: 1250px) {
+  .overlay {
+    width: 100%;
+    max-width: 900px;
+    padding: 25px 50px 75px 100px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 15%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .overlay {
+    width: 100%;
+    max-width: 700px;
     padding: 25px 50px 75px 100px;
     align-items: center;
     background-color: #ab858c;
@@ -532,10 +586,51 @@ strong {
   }
 }
 
+@media screen and (max-width: 900px) {
+  .overlay {
+    width: 100%;
+    max-width: 650px;
+    padding: 25px 50px 75px 100px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 18%;
+  }
+}
+@media screen and (max-width: 850px) {
+  .overlay {
+    width: 100%;
+    max-width: 500px;
+    padding: 25px 50px 75px 100px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 12%;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .overlay {
     width: 100%;
-    max-width: 320px;
+    max-width: 400px;
+    padding: 25px 50px 75px 250px;
+    align-items: center;
+    background-color: #ab858c;
+    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
+    border-radius: 2rem;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    margin-left: 12%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .overlay {
+    width: 100%;
+    max-width: 280px;
     padding: 25px 50px 75px 250px;
     align-items: center;
     background-color: #ab858c;
