--- a/css/contact.css
+++ b/css/contact.css
@@ -626,7 +626,7 @@ strong {
     margin-left: 12%;
   }
 }
-
+/*
 @media screen and (max-width: 400px) {
   .overlay {
     width: 100%;
@@ -639,7 +639,7 @@ strong {
     border: 1px solid rgba(255, 255, 255, 0.125);
     margin-left: 10%;
   }
-}
+}*/
 
 .overlay__inner {
   max-width: 36rem;
